# blackice_proctor

./: Cargo.toml  README.md  SECURITY_VALIDATION.md
blackice_client/: Cargo.toml
blackice_client/src/: lib.rs  main.rs
blackice_client/src/applications/: mod.rs  process_control.rs
blackice_client/src/cloud_reporter/: logger.rs  mod.rs  reporter.rs
blackice_client/src/environment/: bypass.rs  mod.rs  vpn.rs
blackice_client/src/network/: firewall_rules.rs  mod.rs  wfp.rs
blackice_server/: Cargo.toml
blackice_server/src/: db.rs  handlers.rs  main.rs  models.rs
src/: lib.rs  main.rs
src/environment/: bypass.rs
src/network/: firewall_rules.rs  wfp.rs
